                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.1.0

  *) [TS-2254] On ARM arch, ink_atomic_increment returns wrong value.
   Author: Yu Qing.

  *) [TS-2269] regex_remap plugin does not deal with empty path's properly.
   Author: Kit Chan.

  *) [TS-2270] ESI Plugin can have infinite loop while doing gunzip on
   responses. Author: Kit Chan.

  *) [TS-2268] Add support for opening protocol traffic sockets through the 
   traffic_manager. Added TSPluginDescriptorAccept into expiremental API.

  *) [TS-2266] Add a "make rat" Makefile target, to create a RAT report. This
   is used for verifying licensing compliance on the entire source tree.

  *) [TS-2212] Implement the <fsiz> log tag for HTTP requests. This also does
   a small refactoring of the "atoi" functions in lib/ts, such that we now
   consistently have both prototypes for all types (with and without a
   string length parameter).

  *) [TS-2261] Add config option to restore/elevate access to reading files by
   root when loading plugins

  *) [TS-2257] Healthcheck plugin can stop watching some events.

  *) [TS-2260] Avoid flooding log when log host is down.

  *) [TS-2259] Introduce failover hosts for logging system.

  *) [TS-2256] Mem stats info is bad when enable reclaimable-freelist.

  *) [TS-2255] TS should not flood printing after log space reach the limit.

  *) [TS-2245] cancel the trigger of CacheVC in openWriteCloseDataDone.

  *) [TS-2232] log level should be change from Status to Debug.
    Author: Yu Qing <zhuangyuan@taobao.com>

  *) [TS-2201] split drainIncomingChannel two thread, one handle Broadcast
   message and other handle Reliable(TCP) request for supporing large cluster.

  *) [TS-2144] Avoid race on e.g. "traffic_server -Cclear" which would crash
   the process intermittently.

  *) [TS-2217] remove the option to turn off body factory - setting it to 0
   will result in empty responses.
